--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
             <version>19</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.38</version>
+        </dependency>
+
     </dependencies>
 
 </project>
